css/styles.css
.avatar {
    display: inline-block;
    width: 150px;
    height: 150px;
    border-radius: 50%;
  
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
  }
  
  .one {
    background-image: url("\img\steve_profile.jpg");
  }
  

